@@ -12,7 +12,7 @@ class JediFileSpec(object):
                    'lfn','GUID','type','status','fsize','checksum','scope',
                    'attemptNr','maxAttempt','nEvents','keepTrack',
                    'startEvent','endEvent','firstEvent','boundaryID','PandaID',
-                   'failedAttempt')
+                   'failedAttempt','lumiBlockNr')
     # attributes which have 0 by default
     _zeroAttrs = ('fsize','attemptNr','failedAttempt')
     # mapping between sequence and attr
